@@ -726,9 +726,6 @@ make distributions       - Builds and configures TWE with all documentations and
                </path>
             </signjar>
          </then>
-         <else>
-            <antcall target="signem" />
-         </else>
       </if>      
       <zip destfile="${dist.folder}/${app.name}-${version}-${release}.webstart.zip" update="true">
          <zipfileset dir="${dist.community.webstart.dir}" prefix="${app.name}-${version}-${release}.webstart" />
@@ -827,16 +824,6 @@ make distributions       - Builds and configures TWE with all documentations and
          </then>
       </if>
    </target>
-
-   <target name="signem">
-      <echo message="Signing with Together certificate" />
-      <signjar alias="${sign.alias}"
-                 storepass="${sign.pwd}"
-                 keystore="${sign.privatekey}"
-                 storetype="pkcs12">
-            <fileset dir="${dist.community.webstart.dir}/lib" includes="*.jar" />
-      </signjar>
-   </target>   
 
    <target name="get-current-time">
       <tstamp>
